Guía XX: Separación de lógica del DataSet no tipado

--- a/CapaDesconectada/CapaDesconectada.csproj
+++ b/CapaDesconectada/CapaDesconectada.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AccesoDatos\AccesoDatos.csproj">
+      <Project>{913db903-c4d8-4bf8-a3fc-5ecf0e54c2bf}</Project>
+      <Name>AccesoDatos</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
